fix: fixed width and height to remove scrollbar in codepen

--- a/3dbox/style.css
+++ b/3dbox/style.css
@@ -1,6 +1,6 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  padding: 32px;
+  padding-top: 64px;
   margin: 0px;
   display: flex;
   justify-content: center;
@@ -80,8 +80,8 @@ button {
   transform: rotateX(-90deg) translateZ(200px);
 }
 
-#box.show-front  { transform: translateZ( -50px) rotateY(0deg); }
-#box.show-back   { transform: translateZ( -50px) rotateY(-180deg); }
+#box.show-front  { transform: translateZ(-50px) rotateY(0deg); }
+#box.show-back   { transform: translateZ(-50px) rotateY(-180deg); }
 #box.show-right  { transform: translateZ(-150px) rotateY(-90deg); }
 #box.show-left   { transform: translateZ(-150px) rotateY(90deg); }
 #box.show-top    { transform: translateZ(-100px) rotateX(-90deg); }
